<resources>
    <string name="app_name">smileyrating</string>
    <string name="ipc_recommend">Would you recommend IPC to your friends?</string>
    <string name="ipc_content">Drag the slider below to rate your experience with us!</string>
    <string name="ipc_submit">Submit</string>
    <string name="ipc_skip">Skip</string>
    <string name="show_dialog">Show Dialog</string>
    <string name="highly_likely">Highly Likely</string>
    <string name="highly_unlikely">Highly Unlikely</string>
    <string name="likely">Likely</string>
    <string name="less_likely">Less Likely</string>
    <string name="never">Never</string>
    <string name="back">Back</string>
    <string name="feedback_content">Success! Thank you for submitting your feedback!</string>
    <string name="show_smiley">Show Smiley</string>
    <string name="show_update">Show Update</string>
    <string name="submit">Submit</string>
    <string name="write_your_review">Write your Review</string>

    <!--    IPC Update content-->
    <!--    Splash screen-->
    <string name="well_come">Welcome to The IPC App</string>
    <string name="splash_screen_1">Collect points to redeem personalised rewards &amp; e-vouchers</string>
    <string name="splash_screen_2">Member-exclusive event &amp; promos</string>
    <string name="splash_screen_3">Special perks for your little ones with Sma Club</string>
    <string name="splash_screen_4">Sign up to be our Tack Club member today!</string>
    <string name="splash_screen_5">First things first,</string>
    <string name="sign_up_mobile_number">Register with your mobile number. This will be used as your log in.</string>
    <string name="splash_screen_7">Enter OTP</string>
    <string name="splash_screen_8">A 6 digit OTP that was sent to +60123456789</string>
    <string name="splash_screen_9">Didni\'t receive it? Try again in 0:59</string>
    <string name="splash_screen_10">You will now be directed to set up your account details</string>
    <string name="splash_screen_11">This is your avatar, customise it and it will represent you &amp; your interests to elevate your experience on the IPC app!</string>

    <string name="sign_up">Sign up</string>
    <string name="log_in">Login</string>
    <string name="maybe_later">Maybe later</string>
    <string name="next">Next</string>
    <!--Sign up & on boarding-->
    <string name="sign_up_1">What is your race?</string>
    <string name="sign_up_2"><u>Prefer not to say</u></string>
    <string name="sign_up_3"><u>Why we ask</u></string>
    <string name="sign_up_race_1">Malay</string>
    <string name="sign_up_race_2">Chinese</string>
    <string name="sign_up_race_3">Indian</string>
    <string name="sign_up_race_4">Lain-lain</string>
    <string name="sign_up_interests">What are your interests?</string>
    <string name="sign_up_interests_1">Select any areas of your interest so that we can personalise your experience better!</string>
    <string name="sign_up_interests_2">Registration completed!</string>
    <string name="sign_up_interests_3">By checking this, I agree that my information provided is for IPC\'s internal use &amp; for personalising my IPC app experience only.</string>
    <!--   Avatar: on boarding flow  -->
    <string name="avatar_on_board_1">Now for the fun part</string>
    <string name="avatar_on_board_2">Select your preferences to customise your character and shopping your experience at IPC!</string>
    <string name="let_do_it">Let\'s do it!</string>
    <string name="avatar_on_board_3">Which are your top 3?</string>
    <string name="avatar_on_board_4">Select 3 to show on your avatar</string>
    <string name="avatar_on_board_5">Take your avatar further</string>
    <string name="avatar_on_board_6">More customise options to make your avatar uniquely you!</string>
    <string name="okay">Okay!</string>
    <string name="save">Save</string>
    <string name="avatar_on_board_7">Customise your avatar</string>
    <string name="looking_great">Looking great!</string>
    <string name="avatar_on_board_8">Now let\'s go experience the IPC app!</string>
    <string name="go_to_home">Go to Home</string>
    <string name="share_my_avatar">Share my avatar</string>
    <!--    home page-->
    <string name="what_new">What\'s new</string>
    <string name="home_page_1">Exclusive rewards for Tack Club member</string>
    <string name="home_page_2">Exclusive e-voucher</string>
    <string name="home_page_3">Exclusive rewards for you</string>
    <string name="home_page_4">Redeem your points</string>
    <!--Profile-->
    <string name="profile">Profile</string>
    <string name="rbbc">RBBC</string>
    <string name="my_card">My Cards</string>
    <string name="my_badges">My badges</string>
    <string name="view_all_my_badges">View all my badges</string>
    <!--Tack Club Perks-->
    <string name="tack_club_perks">Tack Club Perks</string>
    <string name="exclusive_for_you">Exclusive for you</string>
    <string name="show_this_to_the_cashier">Show this to the cashier to redeem the reward.</string>
    <string name="redemption_successful">Redemption successful!</string>
    <!--Rewards    -->
    <string name="catalogue">Catalogue</string>
    <string name="my_rewards">My Rewards</string>
    <string name="get_started">Get Started</string>
    <!--    Interest tag-->
    <string name="f_b">F&amp;B</string>
    <string name="fashion">Fashion</string>
    <string name="beauty">Beauty</string>
    <string name="fitness">Fitness</string>
    <string name="sports">Sports</string>
    <string name="pets">Pets</string>
    <string name="parenting">Parenting</string>
    <string name="children">Children</string>
    <string name="education">Education</string>
    <string name="home_living">Home &amp; Living</string>
    <string name="it">IT</string>
    <string name="grocery">Grocery</string>
    <string name="cooking">Cooking</string>
    <string name="navigation_discover">Discover</string>

    <string name="navigation_home">Home</string>
    <string name="navigation_facilities">Facilities</string>
    <string name="navigation_store_guide">Store  Guide</string>
    <string name="navigation_parking">Parking</string>
    <string name="navigation_rewards">Rewards</string>
    <string name="navigation_notifications">Notifications</string>
    <string name="navigation_profile">Profile</string>
    <string name="home_tv_title">Good %1$s!</string>

    <string name="home_tv_login_or_signup">Log in or Sign up</string>
    <string name="home_tv_point">%1$s pts</string>
    <string name="wifi">Wifi</string>
    <string name="e_vouchers">E-vouchers</string>
    <string name="events">Events</string>
    <string name="exclusive_for_tack_club">Exclusive rewards for your Tack Club member</string>
    <string name="exclusive_e_voucher">Exclusive e-voucher</string>
    <string name="mobile_number"><b>+6</b> 0123456798</string>
    <string name="an_otp_will_be_sent_to_you">An OTP will be sent to you</string>
    <string name="lets_go">Let\'s go!</string>
    <string name="tack_point_12_month_validity">Our Tack Points have a 12 months validity from the day your membership starts and renews on the same date. Be sure to redeem your points before they expire!</string>

    <string name="home.tv_learn_more">Learn More</string>
    <string name="about_tack_club">About Tack Club</string>
    <string name="shape">Shape</string>

    <string name="colour">Colour</string>
    <string name="expression">Expression</string>
    <string name="something_else">Something else</string>
    <string-array name="text_tag">
        <item>F&amp;B</item>
        <item>Fashion</item>
        <item>Beauty</item>
        <item>Fitness</item>
        <item>Sports</item>
        <item>Pets</item>
        <item>Parenting</item>
        <item>Children</item>
        <item>Education</item>
        <item>Home &amp; Living</item>
        <item>IT</item>
        <item>Grocery</item>
        <item>Cooking</item>
    </string-array>
    <string-array name="text_customise">
        <item>Shape</item>
        <item>Colour</item>
        <item>Expression</item>
        <item>Something else</item>
    </string-array>
    <string name="splash_screen_content_usp1">Get personalised rewards &amp; redeem e-vouchers with Tack Points</string>
    <string name="splash_screen_content_usp2">Enjoy member-exclusive events &amp; promotions</string>
    <string name="splash_screen_content_usp3">Special perks for your little ones with IPC Små Club</string>
    <string name="splash_screen_content_cta">Sign up as a Tack Club member today!</string>
    <string name="splash_screen_button_content_cta">Log in to existing account</string>
    <string name="sign_up_error_message">An OTP will be sent to you</string>




</resources>