<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_30"
        android:layout_marginStart="@dimen/dp_30"
        android:fontFamily="@font/ikanosans_bold"
        android:text="@string/splash_screen_4"
        android:textColor="@color/text_color_welcome"
        android:textSize="@dimen/sp40"
        android:layout_marginTop="@dimen/dimen_100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvContentAvatar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_30"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_30"
        android:fontFamily="@font/ikanosans_bold"
        android:text="@string/sign_up_mobile_number"
        android:textColor="@color/text_color_welcome"
        android:textSize="@dimen/sp_21"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWelcome" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ctBottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_55dp"
        android:layout_marginBottom="@dimen/dp_16"
        android:layout_marginHorizontal="@dimen/dp_30"
        android:layout_marginTop="@dimen/dimen_50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvContentAvatar"
        android:paddingHorizontal="@dimen/size_13dp"
        android:background="@drawable/bg_input_mobile_number"
        android:paddingVertical="@dimen/size_13dp"
        >


        <EditText
            android:background="@color/white"
            android:id="@+id/edtMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/ikanosans_light"
            android:hint="@string/mobile_number" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvOpt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_30"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="@dimen/size_13dp"
        android:fontFamily="@font/ikanosans_light"
        android:text="@string/an_otp_will_be_sent_to_you"
        android:textColor="@color/text_color_welcome"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ctBottom" />



</androidx.constraintlayout.widget.ConstraintLayout>