<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_30"
        android:layout_marginStart="@dimen/dp_30"
        android:fontFamily="@font/ikanosans_bold"
        android:text="@string/splash_screen_4"
        android:textColor="@color/text_color_welcome"
        android:textSize="@dimen/sp40"
        android:layout_marginTop="@dimen/dp_131"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvContentAvatar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_30"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_30"
        android:fontFamily="@font/ikanosans_bold"
        android:text="@string/splash_screen_10"
        android:textColor="@color/text_color_welcome"
        android:textSize="@dimen/sp_21"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWelcome" />

    <ImageView
        android:id="@+id/imgMain"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_38"
        android:src="@drawable/ic_logo"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvContentAvatar"
        app:layout_constraintWidth_percent="0.2" />

    <TextView
        android:id="@+id/tvContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_30"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_30"
        android:fontFamily="@font/ikanosans_bold"
        android:text="@string/splash_screen_11"
        android:textColor="@color/text_color_welcome"
        android:textSize="@dimen/sp_21"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgMain" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvBottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_100dp"
        app:cardBackgroundColor="@color/hollywood_cerise"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="3:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.3">

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="@dimen/dp_30"
            android:paddingVertical="@dimen/dp_16"
            android:fontFamily="@font/ikanosans_bold"
            android:text="@string/lets_go"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_12sp" />
    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>