<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/imgMain"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_40"
        android:src="@drawable/ic_logo"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRegistration"
        app:layout_constraintWidth_percent="0.3" />

    <TextView
        android:id="@+id/tvRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_30"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_80"
        android:fontFamily="@font/ikanosans_bold"
        android:text="@string/sign_up_1"
        android:textColor="@color/text_color_welcome"
        android:textSize="@dimen/sp40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvChinese"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:layout_marginTop="@dimen/dp_30"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/imgMain"
        app:layout_constraintWidth_percent="0.3">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="@dimen/dimen_12dp"
            android:fontFamily="@font/ikanosans_light"
            android:text="@string/sign_up_race_2"
            android:textColor="@color/hollywood_cerise" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvLainLain"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:layout_marginTop="@dimen/dp_16"
        app:cardBackgroundColor="@color/white"

        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/cvChinese"
        app:layout_constraintWidth_percent="0.3">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="@dimen/dimen_12dp"
            android:fontFamily="@font/ikanosans_light"
            android:text="@string/sign_up_race_4"
            android:textColor="@color/hollywood_cerise" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvMalay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/dimen_8dp"
        android:layout_marginTop="@dimen/dp_30"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/imgMain"
        app:layout_constraintWidth_percent="0.3">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="@dimen/dimen_12dp"
            android:fontFamily="@font/ikanosans_light"
            android:text="@string/sign_up_race_1"
            android:textColor="@color/hollywood_cerise" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvIndian"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/dimen_8dp"
        android:layout_marginTop="@dimen/dp_16"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/cvMalay"
        app:layout_constraintWidth_percent="0.3">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="@dimen/dimen_12dp"
            android:fontFamily="@font/ikanosans_light"
            android:text="@string/sign_up_race_3"
            android:textColor="@color/hollywood_cerise" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvPre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:fontFamily="@font/ikanosans_bold"
        android:text="@string/sign_up_2"
        android:textColor="@color/hollywood_cerise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvIndian" />

</androidx.constraintlayout.widget.ConstraintLayout>