<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ipcupdate.ui.signup.SignUpActivity"
    android:background="@color/white">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vpSlider"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/ctBottom"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ctBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_40"
        android:paddingHorizontal="@dimen/dp_40"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tvBack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ikanosans_bold"
            android:gravity="center"
            android:text="@string/back"
            android:textColor="@color/hollywood_cerise"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.2" />

        <TextView
            android:id="@+id/tvWhyAsk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ikanosans_bold"
            android:text="@string/sign_up_3"
            android:textColor="@color/hollywood_cerise"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/tvNext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ikanosans_bold"
            android:gravity="center"
            android:text="@string/next"
            android:textColor="@color/hollywood_cerise"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.2" />
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>