<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ipc3.signup.SignUpScreenActivity">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vpSignUpScreen"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/tvBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_32dp"
        android:layout_marginStart="@dimen/dimen_37dp"
        android:background="@drawable/background_rounder_card_view"
        android:fontFamily="@font/ikanosans_bold"
        android:paddingHorizontal="@dimen/dimen_32dp"
        android:paddingVertical="@dimen/dp_16"
        android:text="@string/back"
        android:textAlignment="center"
        android:textColor="@color/blue_main_color"
        android:textSize="@dimen/dimen_16sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/ilSignUpScreen"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_32dp"
        android:layout_marginEnd="@dimen/dimen_37dp"
        android:background="@drawable/background_card_view"
        android:fontFamily="@font/ikanosans_bold"
        android:paddingHorizontal="@dimen/dimen_32dp"
        android:paddingVertical="@dimen/dp_16"
        android:text="@string/next"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_16sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/ilSignUpScreen"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvLetsGo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/tvNext"
        app:layout_constraintBottom_toTopOf="@id/ilSignUpScreen"
        android:layout_marginBottom="@dimen/dimen_32dp"
        android:layout_marginHorizontal="@dimen/dp_52"
        android:background="@drawable/background_card_view"
        android:fontFamily="@font/ikanosans_bold"
        android:paddingVertical="@dimen/dp_16"
        android:text="@string/lets_go"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_16sp"
        android:visibility="gone" />

    <com.mdapp.smileyrating.ipcupdate.customlayout.IndicatorLayout
        android:id="@+id/ilSignUpScreen"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/dimen_31dp"
        android:orientation="horizontal"
        app:indicatorCount="5" />
</androidx.constraintlayout.widget.ConstraintLayout>